--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,14 @@
         android:theme="@style/Theme.MyStoryApps"
         tools:targetApi="31">
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDpeZsPUsWVb-vSnKfwn8K_Sh98b28Ec0I" />
+
+        <activity
+            android:name=".ui.MapsStoriesActivity"
+            android:exported="false"
+            android:label="@string/title_activity_maps_stories" />
         <activity
             android:name=".ui.DetailActivity"
             android:exported="false" />
